k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { APP_NAME } }
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - { { DOMAIN } }
      secretName: wildcard-outatime-live-tls
  rules:
    - host: { { DOMAIN } }
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { APP_NAME } }
                port:
                  number: 80
